sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:17: error: not found: value j
setValeur(j,value);	
          ^